# Chat2-Templates

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_DE.md  docker-compose.yaml  location.txt  pyproject.toml  setup_env_uv.sh
.github/workflows/: automerge.yml  ci.yml
app/: app.py  config.py
app/app/data/: ideas.json  stocks.json
app/routes/: chat.py
app/static/js/: chat.js
app/templates/: BACKUP_chat_interface.html  chat_interface.html
app/utils/: data_handler.py  model_fetcher.py  network_scanner.py  prompt_loader.py
prompts/: 02_Textzusammenfassung.md  03_Blog generator.md  04_Text-Humanisierung.md  05_Anthropic JSON.md  Affirmationen-Konsolidierung.md  Aktien-Strategien.md  App-Ideen.md  Blogeintrag mit Internet-Recherche.md  Budgetoptimierung.md  Code-Optimierung.md  DeepThink.md  Documentation Generator.md  Eingeschlossene-Emotionen.md  IT-Architekt.md  Kundenaufnahme-Planer.md  Mega-Prompt-erstellen.md  N8n-Workflow generieren.md  Portfolio-Performance.md  Priming-Strategien Internet.md  Story-Maker.md  Textverbesserung.md  YouTube-Skript.md  aktien-check.md  blogeintrag.md  code.md  composerize.md  entscheidungs-hilfe.md  generell.md  gps.md  reddit-antwort.md  reddit-frage.md  situation-reflektieren.md  texten.md  whatsapp.md  zusammenfassung.md
